--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style>
+			#screen {
+				width: device-width;
+				height: device height;
+			}
+		</style>
 	</head>
 	<body>
+		<canvas id="screen"></canvas>
 	</body>
 </html>
