--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 				height: device height;
 			}
 		</style>
+		<script src="https://lvoz2.github.io/Orez/js/main.js"></script>
 	</head>
 	<body>
 		<canvas id="screen"></canvas>
