--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		</style>
 		<script src="https://lvoz2.github.io/Orez/js/main.js"></script>
 	</head>
-	<body>
+	<body onload="load()">
 		<canvas id="screen"></canvas>
 	</body>
 </html>
