--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<style>
-			#screen {
-				width: device-width;
-				height: device height;
+			html, body {
+				width: 100%;
+				height: 100%;
+				margin: 0;
 			}
 		</style>
 		<script src="https://lvoz2.github.io/Orez/js/main.js"></script>
