--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		</style>
 		<script src="https://lvoz2.github.io/Orez/js/main.js"></script>
 	</head>
-	<body onload="load()">
+	<body onload="game.load()" onresize="game.resize()">
 		<canvas id="screen"></canvas>
 	</body>
 </html>
