--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 			<h1>Orez</h1>
 			<br/>
 			<h4 id="description"></h4>
-			<button class="menu-button" onclick="loadGame()">Load Game</button>
-			<button class="menu-button" onclick="newGame()">New Game</button>
-			<button class="menu-button" onclick="loadGame()"></button>
+			<button class="menu-button" onclick="game.loadGame()">Load Game</button>
+			<button class="menu-button" onclick="game.newGame()">New Game</button>
 		</div>
 		<canvas id="screen"></canvas>
 	</body>
