--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 			<button class="menu-button" onclick="game.loadGame()">Load Game</button>
 			<button class="menu-button" onclick="game.newGame()">New Game</button>
 		</div>
-		<canvas id="screen"></canvas>
+		<canvas id="screen">Your browser does not support the HTML5 canvas element. To fix this, update your browser.</canvas>
 	</body>
 </html>
