--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
 	<head>
 		<style>
@@ -15,8 +15,8 @@
 			<h1>Orez</h1>
 			<h4 id="description"></h4>
 			<br/>
-			<button class="menu-button" onclick="game.loadGame()">Load Game</button>
-			<button class="menu-button" onclick="game.newGame()">New Game</button>
+			<button id= loadGame class="menu-button" onclick="game.loadGame()">Load Game</button>
+			<button id= newGame class="menu-button" onclick="game.newGame()">New Game</button>
 		</div>
 		<canvas id="screen">Your browser does not support the HTML5 canvas element. To fix this, update your browser.</canvas>
 	</body>
