--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	</head>
 	<body onload="game.load()" onresize="game.resize()">
 		<div id="loadScreen">
+			<img src="Orez banner.jpg" alt=:Orez_banner" style="width:1024px;height:100px;"> 
 			<h1>Orez</h1>
 			<h4 id="description"></h4>
 			<br/>
