--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body onload="game.load()" onresize="game.resize()">
 		<div id="loadScreen">
-			<img src="Orez banner.jpg" alt="Orez_banner" style="width: 1024px; height: 100px;"/> 
+			<img src="./images/Orez%20banner.jpg" alt="Orez_banner" style="width: 1024px; height: 100px;"/> 
 			<h1>Orez</h1>
 			<h4 id="description"></h4>
 			<br/>
