--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		</style>
 		<title>Orez - Gather Resources, Manufacture Items, Automate Everything!</title>
 		<script src="https://lvoz2.github.io/Orez/js/main.js"></script>
-		<link rel="stylesheet" type="text/css" src="./css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="./css/main.css"/>
 	</head>
 	<body onload="game.load()" onresize="game.resize()">
 		<div id="loadScreen">
