--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<title>Orez - Gather Resources, Manufacture Items, Automate Everything!</title>
 		<script src="https://lvoz2.github.io/Orez/js/main.js"></script>
 		<link rel="stylesheet" type="text/css" href="./css/main.css"/>
+		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/>
 	</head>
 	<body onload="game.load()" onresize="game.resize()">
 		<div id="loadScreen">
